fixed links block image spacing

--- a/assets/sass/styles/centered.sass
+++ b/assets/sass/styles/centered.sass
@@ -76,6 +76,11 @@
                                 margin-bottom: $spacing-3
                                 .media
                                     width: columns(2)
+                    &.block--option-icons-false
+                        .links
+                            > li.with-image
+                                .link-content
+                                    min-height: unset
                 &-gallery
                     .container
                         .block-content
